add api get payment by id
