# config/routes/payment.js
@@ -8,6 +8,7 @@ const Authentication = require("../../middlewares/authenticate");
 
 router.get("/", payment.getPayment);
 router.put("/", Authentication, payment.createPayment);
+router.get("/:id", payment.getPaymentById);
 
 
 module.exports = router;
